Nuevo titulo mejorado de índex.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8" />
-	<title>Mi primera app web :D</title>
+	<title>Comunidad online de gente pro</title>
 	<link rel="stylesheet" href="normalize.css" />
 	<!-- normalize v2.1.2 pone a fugure { margin:0; } 
 	y normalize v3.0.0 pone a figure {margin: 1em 40px; }
