--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 		<h1 id="titulo_header">Puls3 : Comunidad de gente cool, atractiva y millonaria<a href=""></a></h1>
 		<figure id="avatar">
 			<img src="avatar.jpg" />
-			<figcaption>
-				*
-			</figcaption>
+			<figcaption></figcaption>
 		</figure>
 	</header>
 	<nav>
 		<ul>
-			<li id="flechita_nav"><a href="#">*</a></li>
+			<li id="flechita_nav"><a href="#"></a></li>
 			<li><a href="#">Python</a></li>
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">Javascript</a></li>
@@ -53,9 +51,9 @@
 				<a class="guardar_item" href="#">*</a>
 			</p>
 			<p class="votacion">
-				<a class="up" href="#">U</a> 
+				<a class="up" href="#"></a> 
 				3141
-				<a class="down" href="#">D</a> 
+				<a class="down" href="#"></a> 
 			</p>
 		</article>
 	</section>
