--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<a class="tag_item" href="#">Categoria</a>
 				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
-				<a class="guardar_item" href="#">*</a>
+				<a class="guardar_item" href="#"></a>
 			</p>
 			<p class="votacion">
 				<a class="up" href="#"></a> 
